Update ratings items in index.html

--- a/index.html
+++ b/index.html
@@ -459,10 +459,10 @@
             <tr>
               <th>Person</th>
               <th>Type</th>
-              <th>Aurora Photo</th>
-              <th>Retro Keyboard Review</th>
-              <th>Indie Song</th>
-              <th>Short Documentary</th>
+              <th>Monty Python and The Meaning of Life</th>
+              <th>Crime and Punishment</th>
+              <th>National Geographic</th>
+              <th>Chainsaw Massacare: The Game</th>
             </tr>
           </thead>
           <tbody id="ratingsTableBody">
@@ -657,10 +657,10 @@
     
     <h2>The 4 Items Being Rated</h2>
     <ul style="margin: 20px 0 20px 30px; line-height: 2;">
-      <li><strong>Aurora Photo</strong></li>
-      <li><strong>Retro Keyboard Review</strong></li>
-      <li><strong>Indie Song</strong></li>
-      <li><strong>Short Documentary</strong></li>
+      <li><strong>Monty Python and the Meaning of Life</strong></li>
+      <li><strong>Crime and Punishment</strong></li>
+      <li><strong>National Geographic</strong></li>
+      <li><strong>Chainsaw Massacare: The Game</strong></li>
     </ul>
     
     <h2>How to Use This Demo</h2>
