Update labels and name templates in index.html

--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
     <div class="controls">
       <h3>Number of Each Person Type</h3>
       <div class="control-group">
-        <label for="numDiscerning">Discerning people
+        <label for="num">Discerning people
           <span class="tooltip">?
             <span class="tooltiptext">People who consistently rate accurately</span>
           </span>
@@ -684,12 +684,12 @@
     
     // Name templates for different person types
     const NAME_TEMPLATES = {
-      discerning: ["Sharp", "Careful", "Precise", "Keen", "Astute", "Perceptive", "Acute", "Discerning", "Judicious", "Sage"],
-      average: ["Steady", "Average", "Helper", "Typical", "Moderate", "Regular", "Normal", "Standard", "Common", "Fair"],
-      contrarian: ["Opposite", "Contrary", "Reverse", "Inverse", "Counter", "Opposing", "Backward", "Divergent", "Contrary", "Flipped"],
-      random: ["Random", "Chaotic", "Erratic", "Unpredictable", "Variable", "Volatile", "Sporadic", "Arbitrary", "Haphazard", "Capricious"],
-      colluder: ["Booster", "Promoter", "Pusher", "Inflator", "Hyper", "Amplifier", "Enhancer", "Exaggerator", "Elevating", "Uplifting"],
-      limited: ["Limited", "Narrow", "Basic", "Simple", "Restricted", "Bounded", "Constrained", "Confined", "Shallow", "Surface"]
+      discerning: ["Discerning", "Discerning", "Discerning", "Discerning", "Discerning", "Discerning", "Discerning", "Discerning", "Discerning", "Discerning"],
+      average: ["Average", "Average", "Average", "Average", "Average", "Average", "Average", "Average", "Average", "Average"],
+      contrarian: ["Contrarian", "Contrarian", "Contrarian", "Contrarian", "Contrarian", "Contrarian", "Contrarian", "Contrarian", "Contrarian", "Contrarian"],
+      random: ["Random", "Random", "Random", "Random", "Random", "Random", "Random", "Random", "Random", "Random"],
+      colluder: ["Colluder", "Colluder", "Colluder", "Colluder", "Colluder", "Colluder", "Colluder", "Colluder", "Colluder", "Colluder"],
+      limited: ["Limited", "Limited", "Limited", "Limited", "Limited", "Limited", "Limited", "Limited", "Limited", "Limited"]
     };
     
     const SURNAMES = ["Alex", "Blake", "Casey", "Dana", "Ellis", "Finley", "Gray", "Harper", "Indigo", "Jordan",
